--- a/manifest.json
+++ b/manifest.json
@@ -9,20 +9,20 @@
     "imageUrl": "https://raw.githubusercontent.com/rimseg/jellyfin-filter-search/main/icon.png",
     "versions": [
       {
-        "changelog": "- Added File Transformation plugin support for Docker compatibility\n- Improved injection mechanism",
+        "changelog": "- Removed redundant enable/disable setting (use Jellyfin's plugin management instead)\n- Added plugin icon display in dashboard",
         "targetAbi": "10.11.0.0",
-        "version": "1.1.0.1",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.1.0.1/Jellyfin.Plugin.FilterSearch_10.11.6.zip",
-        "checksum": "8cb0d34a328ddc8ff8a7e4aa66bfb40d",
-        "timestamp": "2026-01-27T00:00:00"
+        "version": "1.2.0.0",
+        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.2.0.0/Jellyfin.Plugin.FilterSearch_10.11.6.zip",
+        "checksum": "bfaf7f57b0aa923543535628fca9d80f",
+        "timestamp": "2026-01-28T00:00:00"
       },
       {
-        "changelog": "- Added File Transformation plugin support for Docker compatibility\n- Improved injection mechanism",
+        "changelog": "- Removed redundant enable/disable setting (use Jellyfin's plugin management instead)\n- Added plugin icon display in dashboard",
         "targetAbi": "10.10.7.0",
-        "version": "1.1.0.0",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.1.0.0/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
-        "checksum": "1f73df1dc1a4bdd8aef4fe733662e6b1",
-        "timestamp": "2026-01-27T00:00:00"
+        "version": "1.2.0.0",
+        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.2.0.0/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
+        "checksum": "20839c73684d29732b7ff899f9896954",
+        "timestamp": "2026-01-28T00:00:00"
       }
     ]
   }
