--- a/manifest.json
+++ b/manifest.json
@@ -9,19 +9,19 @@
     "imageUrl": "https://raw.githubusercontent.com/rimseg/jellyfin-filter-search/main/icon.png",
     "versions": [
       {
-        "changelog": "- Removed redundant enable/disable setting (use Jellyfin's plugin management instead)\n- Added plugin icon display in dashboard",
+        "changelog": "- Fixed 'None' button not refreshing video selection\n- Added active filter display bar on library pages with Clear All button",
         "targetAbi": "10.11.0.0",
-        "version": "1.3.0.0",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.3.0.0/Jellyfin.Plugin.FilterSearch_10.11.6.zip",
-        "checksum": "9bbb62ca6a55a8bac2d54bb18bf3f059",
+        "version": "1.4.0.0",
+        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.4.0.0/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
+        "checksum": "1c97a8b0069505c4ad87e5254d30fdfc",
         "timestamp": "2026-02-16T00:00:00"
       },
       {
-        "changelog": "- Removed redundant enable/disable setting (use Jellyfin's plugin management instead)\n- Added plugin icon display in dashboard",
+        "changelog": "- Fixed 'None' button not refreshing video selection\n- Added active filter display bar on library pages with Clear All button",
         "targetAbi": "10.10.7.0",
-        "version": "1.3.0.0",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.3.0.0/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
-        "checksum": "e745453d58d128a2f277c9e20f2c7cf9",
+        "version": "1.4.0.0",
+        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.4.0.0/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
+        "checksum": "60bb9afc3beb6859d2d71c4495ac9cd2",
         "timestamp": "2026-02-16T00:00:00"
       }
     ]
