--- a/manifest.json
+++ b/manifest.json
@@ -9,19 +9,19 @@
     "imageUrl": "https://raw.githubusercontent.com/rimseg/jellyfin-filter-search/main/icon.png",
     "versions": [
       {
-        "changelog": "- Fixed 'None' button not refreshing video selection\n- Added active filter display bar on library pages with Clear All button",
+        "changelog": "- Fixed Select All/None buttons overwhelming the server (now sequential with delay)\n- Added progress indicator during bulk selection\n- Fixed active filter bar now captures filters from dialog\n- Clear All button properly opens filter dialog and clears filters",
         "targetAbi": "10.11.0.0",
-        "version": "1.4.0.0",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.4.0.0/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
-        "checksum": "1c97a8b0069505c4ad87e5254d30fdfc",
+        "version": "1.5.0.0",
+        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.5.0.0/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
+        "checksum": "777050a1e3a4a192f8d6d936c3805442",
         "timestamp": "2026-02-16T00:00:00"
       },
       {
-        "changelog": "- Fixed 'None' button not refreshing video selection\n- Added active filter display bar on library pages with Clear All button",
+        "changelog": "- Fixed Select All/None buttons overwhelming the server (now sequential with delay)\n- Added progress indicator during bulk selection\n- Fixed active filter bar now captures filters from dialog\n- Clear All button properly opens filter dialog and clears filters",
         "targetAbi": "10.10.7.0",
-        "version": "1.4.0.0",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.4.0.0/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
-        "checksum": "60bb9afc3beb6859d2d71c4495ac9cd2",
+        "version": "1.5.0.0",
+        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.5.0.0/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
+        "checksum": "e4232d0d27a9e48105da2af45bab951d",
         "timestamp": "2026-02-16T00:00:00"
       }
     ]
