--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,22 @@
     "imageUrl": "https://raw.githubusercontent.com/rimseg/jellyfin-filter-search/main/icon.png",
     "versions": [
       {
+        "changelog": "- Hidden dialog operations: filter removal from the active bar no longer flashes the dialog\n- Improved filter bar padding: active filters bar no longer stretches edge-to-edge",
+        "targetAbi": "10.11.0.0",
+        "version": "1.6.0.0",
+        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.0/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
+        "checksum": "28e69d546e4df77d3e5bc22c9a4d130f",
+        "timestamp": "2026-02-16T00:00:00"
+      },
+      {
+        "changelog": "- Hidden dialog operations: filter removal from the active bar no longer flashes the dialog\n- Improved filter bar padding: active filters bar no longer stretches edge-to-edge",
+        "targetAbi": "10.10.7.0",
+        "version": "1.6.0.0",
+        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.0/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
+        "checksum": "6f36bf4b83708c451792521bb8b0623c",
+        "timestamp": "2026-02-16T00:00:00"
+      },
+      {
         "changelog": "- Fixed Select All/None buttons overwhelming the server (now sequential with delay)\n- Added progress indicator during bulk selection\n- Fixed active filter bar now captures filters from dialog\n- Clear All button properly opens filter dialog and clears filters",
         "targetAbi": "10.11.0.0",
         "version": "1.5.0.0",
