--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "imageUrl": "https://raw.githubusercontent.com/rimseg/jellyfin-filter-search/main/icon.png",
     "versions": [
       {
-        "changelog": "- Hidden dialog operations: filter removal from the active bar no longer flashes the dialog\n- Improved filter bar padding: active filters bar no longer stretches edge-to-edge",
+        "changelog": "For Jellyfin 10.11.x\n- Hidden dialog operations: filter removal from the active bar no longer flashes the dialog\n- Improved filter bar padding: active filters bar no longer stretches edge-to-edge",
         "targetAbi": "10.11.0.0",
         "version": "1.6.0.0",
         "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.0/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
@@ -17,7 +17,7 @@
         "timestamp": "2026-02-16T00:00:00"
       },
       {
-        "changelog": "- Hidden dialog operations: filter removal from the active bar no longer flashes the dialog\n- Improved filter bar padding: active filters bar no longer stretches edge-to-edge",
+        "changelog": "For Jellyfin 10.10.x\n- Hidden dialog operations: filter removal from the active bar no longer flashes the dialog\n- Improved filter bar padding: active filters bar no longer stretches edge-to-edge",
         "targetAbi": "10.10.7.0",
         "version": "1.6.0.0",
         "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.0/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
@@ -25,7 +25,7 @@
         "timestamp": "2026-02-16T00:00:00"
       },
       {
-        "changelog": "- Fixed Select All/None buttons overwhelming the server (now sequential with delay)\n- Added progress indicator during bulk selection\n- Fixed active filter bar now captures filters from dialog\n- Clear All button properly opens filter dialog and clears filters",
+        "changelog": "For Jellyfin 10.11.x\n- Fixed Select All/None buttons overwhelming the server (now sequential with delay)\n- Added progress indicator during bulk selection\n- Fixed active filter bar now captures filters from dialog\n- Clear All button properly opens filter dialog and clears filters",
         "targetAbi": "10.11.0.0",
         "version": "1.5.0.0",
         "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.5.0.0/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
@@ -33,7 +33,7 @@
         "timestamp": "2026-02-16T00:00:00"
       },
       {
-        "changelog": "- Fixed Select All/None buttons overwhelming the server (now sequential with delay)\n- Added progress indicator during bulk selection\n- Fixed active filter bar now captures filters from dialog\n- Clear All button properly opens filter dialog and clears filters",
+        "changelog": "For Jellyfin 10.10.x\n- Fixed Select All/None buttons overwhelming the server (now sequential with delay)\n- Added progress indicator during bulk selection\n- Fixed active filter bar now captures filters from dialog\n- Clear All button properly opens filter dialog and clears filters",
         "targetAbi": "10.10.7.0",
         "version": "1.5.0.0",
         "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.5.0.0/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
