--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,22 @@
     "imageUrl": "https://raw.githubusercontent.com/rimseg/jellyfin-filter-search/main/icon.png",
     "versions": [
       {
+        "changelog": "For Jellyfin 10.11.x\n- Fix: filter dialog now fully closes after using × or Clear All from the movies page",
+        "targetAbi": "10.11.0.0",
+        "version": "1.6.0.3",
+        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.3/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
+        "checksum": "6d7996db79b02e08f2d5e95b7e680f2c",
+        "timestamp": "2026-02-16T00:00:00"
+      },
+      {
+        "changelog": "For Jellyfin 10.10.x\n- Fix: filter dialog now fully closes after using × or Clear All from the movies page",
+        "targetAbi": "10.10.7.0",
+        "version": "1.6.0.3",
+        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.3/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
+        "checksum": "60cc8884f009b2aff2542391773540c1",
+        "timestamp": "2026-02-16T00:00:00"
+      },
+      {
         "changelog": "For Jellyfin 10.11.x\n- Fix: × and Clear All buttons now work correctly\n- Hidden dialog uses off-screen positioning instead of pointer-events",
         "targetAbi": "10.11.0.0",
         "version": "1.6.0.2",
