--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,22 @@
     "imageUrl": "https://raw.githubusercontent.com/rimseg/jellyfin-filter-search/main/icon.png",
     "versions": [
       {
+        "changelog": "For Jellyfin 10.11.x\n- Fix: active filters now show when entering a library with existing filters\n- Uses fetch interceptor to capture filter state from API calls\n- Improved filter removal: opens dialog to properly uncheck when URL manipulation unavailable",
+        "targetAbi": "10.11.0.0",
+        "version": "1.6.0.5",
+        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.5/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
+        "checksum": "f5da8926b82d4dd86cdc785f00f1a99f",
+        "timestamp": "2026-02-16T00:00:00"
+      },
+      {
+        "changelog": "For Jellyfin 10.10.x\n- Fix: active filters now show when entering a library with existing filters\n- Uses fetch interceptor to capture filter state from API calls\n- Improved filter removal: opens dialog to properly uncheck when URL manipulation unavailable",
+        "targetAbi": "10.10.7.0",
+        "version": "1.6.0.5",
+        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.5/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
+        "checksum": "4f0cdf3a810dfa74202e3bbb9713cc95",
+        "timestamp": "2026-02-16T00:00:00"
+      },
+      {
         "changelog": "For Jellyfin 10.11.x\n- Fix: × and Clear All now reliably work from movies page\n- Dialog hidden with opacity instead of off-screen positioning\n- Waits for dialog to appear before interacting",
         "targetAbi": "10.11.0.0",
         "version": "1.6.0.4",
