--- a/manifest.json
+++ b/manifest.json
@@ -9,115 +9,19 @@
     "imageUrl": "https://raw.githubusercontent.com/rimseg/jellyfin-filter-search/main/icon.png",
     "versions": [
       {
-        "changelog": "For Jellyfin 10.11.x\n- Fix: active filters now show when entering a library with existing filters\n- Uses fetch interceptor to capture filter state from API calls\n- Improved filter removal: opens dialog to properly uncheck when URL manipulation unavailable",
+        "changelog": "For Jellyfin 10.11.x\n- Complete rewrite of active filters bar\n- Removed unreliable URL parsing and fetch interception\n- × and Clear All now use polling (same proven pattern as Select All/None)\n- Filter bar populates from dialog interaction, shows hint when filters detected",
         "targetAbi": "10.11.0.0",
-        "version": "1.6.0.5",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.5/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
-        "checksum": "f5da8926b82d4dd86cdc785f00f1a99f",
+        "version": "1.6.0.6",
+        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.6/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
+        "checksum": "c6c1d9e5392fa6867c03837a11059462",
         "timestamp": "2026-02-16T00:00:00"
       },
       {
-        "changelog": "For Jellyfin 10.10.x\n- Fix: active filters now show when entering a library with existing filters\n- Uses fetch interceptor to capture filter state from API calls\n- Improved filter removal: opens dialog to properly uncheck when URL manipulation unavailable",
+        "changelog": "For Jellyfin 10.10.x\n- Complete rewrite of active filters bar\n- Removed unreliable URL parsing and fetch interception\n- × and Clear All now use polling (same proven pattern as Select All/None)\n- Filter bar populates from dialog interaction, shows hint when filters detected",
         "targetAbi": "10.10.7.0",
-        "version": "1.6.0.5",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.5/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
-        "checksum": "4f0cdf3a810dfa74202e3bbb9713cc95",
-        "timestamp": "2026-02-16T00:00:00"
-      },
-      {
-        "changelog": "For Jellyfin 10.11.x\n- Fix: × and Clear All now reliably work from movies page\n- Dialog hidden with opacity instead of off-screen positioning\n- Waits for dialog to appear before interacting",
-        "targetAbi": "10.11.0.0",
-        "version": "1.6.0.4",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.4/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
-        "checksum": "0a3bb8509acc69c992b0b0de07eba21a",
-        "timestamp": "2026-02-16T00:00:00"
-      },
-      {
-        "changelog": "For Jellyfin 10.10.x\n- Fix: × and Clear All now reliably work from movies page\n- Dialog hidden with opacity instead of off-screen positioning\n- Waits for dialog to appear before interacting",
-        "targetAbi": "10.10.7.0",
-        "version": "1.6.0.4",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.4/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
-        "checksum": "f50cbaba6dbc63974ae088b2ca63a41c",
-        "timestamp": "2026-02-16T00:00:00"
-      },
-      {
-        "changelog": "For Jellyfin 10.11.x\n- Fix: filter dialog now fully closes after using × or Clear All from the movies page",
-        "targetAbi": "10.11.0.0",
-        "version": "1.6.0.3",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.3/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
-        "checksum": "6d7996db79b02e08f2d5e95b7e680f2c",
-        "timestamp": "2026-02-16T00:00:00"
-      },
-      {
-        "changelog": "For Jellyfin 10.10.x\n- Fix: filter dialog now fully closes after using × or Clear All from the movies page",
-        "targetAbi": "10.10.7.0",
-        "version": "1.6.0.3",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.3/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
-        "checksum": "60cc8884f009b2aff2542391773540c1",
-        "timestamp": "2026-02-16T00:00:00"
-      },
-      {
-        "changelog": "For Jellyfin 10.11.x\n- Fix: × and Clear All buttons now work correctly\n- Hidden dialog uses off-screen positioning instead of pointer-events",
-        "targetAbi": "10.11.0.0",
-        "version": "1.6.0.2",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.2/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
-        "checksum": "ad906ac393e94dd468fa0f6e7228dbe9",
-        "timestamp": "2026-02-16T00:00:00"
-      },
-      {
-        "changelog": "For Jellyfin 10.10.x\n- Fix: × and Clear All buttons now work correctly\n- Hidden dialog uses off-screen positioning instead of pointer-events",
-        "targetAbi": "10.10.7.0",
-        "version": "1.6.0.2",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.2/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
-        "checksum": "f29a6804ab120494b568dbed9ac38295",
-        "timestamp": "2026-02-16T00:00:00"
-      },
-      {
-        "changelog": "For Jellyfin 10.11.x\n- Build fix: correctly compiled with .NET 9 for Jellyfin 10.11.x\n- Hidden dialog operations: filter removal from the active bar no longer flashes the dialog\n- Improved filter bar padding: active filters bar no longer stretches edge-to-edge",
-        "targetAbi": "10.11.0.0",
-        "version": "1.6.0.1",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.1/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
-        "checksum": "1979fc6f4b8d764e7dd84e90a21d8deb",
-        "timestamp": "2026-02-16T00:00:00"
-      },
-      {
-        "changelog": "For Jellyfin 10.10.x\n- Build fix: correctly compiled with .NET 8 for Jellyfin 10.10.x\n- Hidden dialog operations: filter removal from the active bar no longer flashes the dialog\n- Improved filter bar padding: active filters bar no longer stretches edge-to-edge",
-        "targetAbi": "10.10.7.0",
-        "version": "1.6.0.1",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.1/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
-        "checksum": "e277392dbc2a407fa560f19e2824441b",
-        "timestamp": "2026-02-16T00:00:00"
-      },
-      {
-        "changelog": "For Jellyfin 10.11.x\n- Hidden dialog operations: filter removal from the active bar no longer flashes the dialog\n- Improved filter bar padding: active filters bar no longer stretches edge-to-edge",
-        "targetAbi": "10.11.0.0",
-        "version": "1.6.0.0",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.0/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
-        "checksum": "a239ac32f2c2fbf9cd7df5cb4eea75a4",
-        "timestamp": "2026-02-16T00:00:00"
-      },
-      {
-        "changelog": "For Jellyfin 10.10.x\n- Hidden dialog operations: filter removal from the active bar no longer flashes the dialog\n- Improved filter bar padding: active filters bar no longer stretches edge-to-edge",
-        "targetAbi": "10.10.7.0",
-        "version": "1.6.0.0",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.0/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
-        "checksum": "978095252c81e0ff9747a651cae396af",
-        "timestamp": "2026-02-16T00:00:00"
-      },
-      {
-        "changelog": "For Jellyfin 10.11.x\n- Fixed Select All/None buttons overwhelming the server (now sequential with delay)\n- Added progress indicator during bulk selection\n- Fixed active filter bar now captures filters from dialog\n- Clear All button properly opens filter dialog and clears filters",
-        "targetAbi": "10.11.0.0",
-        "version": "1.5.0.0",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.5.0.0/Jellyfin.Plugin.FilterSearch_10.11.0.zip",
-        "checksum": "1ee7251771561082815a0ccee407e270",
-        "timestamp": "2026-02-16T00:00:00"
-      },
-      {
-        "changelog": "For Jellyfin 10.10.x\n- Fixed Select All/None buttons overwhelming the server (now sequential with delay)\n- Added progress indicator during bulk selection\n- Fixed active filter bar now captures filters from dialog\n- Clear All button properly opens filter dialog and clears filters",
-        "targetAbi": "10.10.7.0",
-        "version": "1.5.0.0",
-        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.5.0.0/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
-        "checksum": "015b82e4a93654038955d3b8b26e224e",
+        "version": "1.6.0.6",
+        "sourceUrl": "https://github.com/rimseg/jellyfin-filter-search/releases/download/1.6.0.6/Jellyfin.Plugin.FilterSearch_10.10.7.zip",
+        "checksum": "e583f77e545562d82c1b46569b8df6e2",
         "timestamp": "2026-02-16T00:00:00"
       }
     ]
